--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "captcha-cv-ocr",
+  "name": "@lzwme/captcha-cv-ocr",
   "version": "1.1.2",
   "description": "Verification code identification based on OCR (Tesseract) and CV (OpenCV)",
   "main": "index.js",
   "scripts": {
+    "serve": "node index.js",
     "example": "node test/example.js",
     "test": "node test/judge-case.js"
   },
