refactor: 重构 ocr 实现逻辑；新增 ts 类型声明

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.2.0",
   "description": "Verification code identification based on OCR (Tesseract) and CV (OpenCV)",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "serve": "node index.js",
     "example": "node test/example.js",
